feat: add dashboard, rewards/gamification, transcript annotations, and tray icon fix
- Add usage dashboard with stats cards, activity heatmap, daily bar chart, language breakdown
- Add rewards system with streak tracking, 12 achievement badges, 30-day streak calendar
- Add transcript annotations (notes and tags on individual entries)
- Fix system tray icon to use microphone SVG instead of plain circle
- Fix rewards data not broadcasting after transcription
- Fix streak calculation using set for O(1) lookups
- Add retroactive rewards population from existing history
- Send initial rewards data on client connect

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
   <div class="tab-bar" role="tablist" aria-label="Main navigation">
     <button type="button" class="tab-btn active" data-tab="studio" role="tab" aria-selected="true" aria-controls="tab-studio" id="tab-btn-studio">Studio</button>
     <button type="button" class="tab-btn" data-tab="transcripts" role="tab" aria-selected="false" aria-controls="tab-transcripts" id="tab-btn-transcripts">Transcripts</button>
+    <button type="button" class="tab-btn" data-tab="dashboard" role="tab" aria-selected="false" aria-controls="tab-dashboard" id="tab-btn-dashboard">Dashboard</button>
+    <button type="button" class="tab-btn" data-tab="rewards" role="tab" aria-selected="false" aria-controls="tab-rewards" id="tab-btn-rewards">Rewards</button>
     <button type="button" class="tab-btn" data-tab="settings" role="tab" aria-selected="false" aria-controls="tab-settings" id="tab-btn-settings">Settings</button>
   </div>
 
@@ -116,6 +118,16 @@
           <span class="empty-subtitle">Press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Space</kbd> to start recording</span>
         </div>
       </div>
+    </div>
+
+    <!-- Dashboard Tab -->
+    <div id="tab-dashboard" class="tab-panel" role="tabpanel" aria-labelledby="tab-btn-dashboard">
+      <div class="dashboard-scroll" id="dashboard-container"></div>
+    </div>
+
+    <!-- Rewards Tab -->
+    <div id="tab-rewards" class="tab-panel" role="tabpanel" aria-labelledby="tab-btn-rewards">
+      <div class="rewards-scroll" id="rewards-container"></div>
     </div>
 
     <!-- Settings Tab -->
