feat: improve analysis UI and history persistence for v1.0.1

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <button type="button" class="tab-btn" data-tab="transcripts" role="tab" aria-selected="false" aria-controls="tab-transcripts" id="tab-btn-transcripts">Transcripts</button>
     <button type="button" class="tab-btn" data-tab="dashboard" role="tab" aria-selected="false" aria-controls="tab-dashboard" id="tab-btn-dashboard">Dashboard</button>
     <button type="button" class="tab-btn" data-tab="rewards" role="tab" aria-selected="false" aria-controls="tab-rewards" id="tab-btn-rewards">Rewards</button>
+    <button type="button" class="tab-btn" data-tab="analysis" role="tab" aria-selected="false" aria-controls="tab-analysis" id="tab-btn-analysis">Analysis</button>
     <button type="button" class="tab-btn" data-tab="settings" role="tab" aria-selected="false" aria-controls="tab-settings" id="tab-btn-settings">Settings</button>
   </div>
 
@@ -128,6 +129,10 @@
     <!-- Rewards Tab -->
     <div id="tab-rewards" class="tab-panel" role="tabpanel" aria-labelledby="tab-btn-rewards">
       <div class="rewards-scroll" id="rewards-container"></div>
+    </div>
+
+    <div id="tab-analysis" class="tab-panel" role="tabpanel" aria-labelledby="tab-btn-analysis">
+      <div class="analysis-scroll" id="analysis-container"></div>
     </div>
 
     <!-- Settings Tab -->
